--- a/assets/css/admin-styles.css
+++ b/assets/css/admin-styles.css
@@ -1,5 +1,5 @@
 /* Commissions page */
-#eddc-export-commissions {
+.eddc-export-form {
 	clear: both;	background: #f5f5f5;
 	background-image: -webkit-gradient(linear, left bottom, left top, from(#f5f5f5), to(#fafafa));
 	background-image: -webkit-linear-gradient(bottom, #f5f5f5, #fafafa);
