Better handling when no dates are defined for commissions payout generation #92

--- a/assets/css/admin-styles.css
+++ b/assets/css/admin-styles.css
@@ -14,7 +14,10 @@
 	border-style: solid;
 	border-radius: 3px;
 	font-size: 13px;
-	line-height: 2.1em;
+}
+
+#edd-commissions-export-wrap .edd_datepicker {
+	height: 28px;
 }
 
 .eddc-medium-text {
